# secrets-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  secret_scanning.yml
.github/codeql/: codeql-config.yml
.github/workflows/: 01-Validate.yml  02-CodeQL.yml  02-Release.yml  03-Publish.yml  03-Release.yml  codeql.yml  publish.yml
examples/: basic.rs  config.rs  file.rs  serde.rs  sharing.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: bindable.rs  error.rs  lib.rs  secret.rs  source.rs  urn.rs
src/sources/: env.rs  file.rs
tests/: derive_bindable.rs  file_source.rs
tests/fixtures/: generate.sh
