[workspace]
members = ["macros"]
resolver = "2"

[package]
name = "secrets-rs"
version = "0.1.0"
edition = "2024"
exclude = ["examples/"]

[dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
secrets-rs-macros  = { path = "macros" }
