[package]
name        = "secrets-rs-macros"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
description = "Procedural macros for secrets-rs"
readme      = "../README.md"
keywords    = ["secrets", "configuration", "security", "macros"]
categories  = ["config", "authentication"]

[lib]
proc-macro = true

[dependencies]
syn          = { version = "2", features = ["full"] }
quote        = "1"
proc-macro2  = "1"
